EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/17/2011==
JJ: Changed tradeskills to distinguish world containers in multiple recipe matches. Split invalid container vs. non-unique recipe error log entries. Allowed server to select first match for duplicate recipe contents.

==05/16/2011==
JJ: (Zothen) UCS message logic fix.
JJ: (Zothen) Learning basics clean name fix.

==05/09/2011==
KLS: (lerxst2112) *nix compile fix.
KLS: Added #picklock #sensetrap and #disarmtrap for LDoN traps since they still don't work quite right on the newer clients because we don't implement destructable objects yet.

==05/08/2011==
Congdar: (Timothy_nonax) Add Bot Command ( #bot pull )

==05/03/2011==
Trevius: (Vaion) Fix for focus effect decay over max level.
Trevius: (Zothen) Crash fix for UCS.
Trevius: Rule added for Skill Caps Max Level to resolve issues with servers that have Chars over level 75 after Rev1875.

Optional SQL: utils/sql/svn/1889_optional_skill_cap_rule.sql

==05/02/2011==
Secrets: Added OP_CameraEffect for Titanium.
Secrets: Added commands: #reloadallrules, #reloadrulesworld, and #camerashake. These default to 
Secrets: Added optional "global" flag as item 5 in the $mob->CameraEffect() quest object. This does #camerashake, but in quest form.
Secrets: #reloadallrules reloads rules in every single zone plus world. #reloadrulesworld reloads the rules in world only.
Secrets: #camerashake shakes the camera in every zone with required args intensity and duration.

==04/24/2011==
Trevius: Added new Perl Mob quest objects GetItemHPBonuses() and GetSpellHPBonuses().

==04/17/2011==
Secrets: Converted PVP flags to be a variable, as there are other PVP rulesets embedded in the client. These will need code support to work properly. (IsAttackAllowed specifically.)